--- a/assets/css/chatbox.scss
+++ b/assets/css/chatbox.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
+    font-family: 'Poppins', sans-serif;
     .chatbox_button {
         text-align: center;
         color: white;
@@ -40,6 +41,11 @@
             .date,
             .author {
                 font-weight: bold;
+                font-size: 1em;
+            }
+            .content
+            {
+                font-size: 0.9em;
             }
         }
     }
